RESOLVED FIXED304140
[WebContent] Fix Integer Underflow in xmlReadMemory
https://bugs.webkit.org/show_bug.cgi?id=304140
Summary [WebContent] Fix Integer Underflow in xmlReadMemory
zak ridouh
Reported 2025-12-13 23:40:06 PST
Add underflow & overflow checking to prevent passing incorrect values to `libxml2`
Attachments
Radar WebKit Bug Importer
Comment 1 2025-12-13 23:40:14 PST
zak ridouh
Comment 2 2025-12-13 23:48:41 PST
zak ridouh
Comment 3 2025-12-13 23:53:33 PST
EWS
Comment 4 2026-01-07 22:19:39 PST
Committed 305255@main (66bfd48c94bf): <https://commits.webkit.org/305255@main> Reviewed commits have been landed. Closing PR #55372 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.