[WebContent] Fix Integer Underflow in xmlReadMemory https://bugs.webkit.org/show_bug.cgi?id=304140 rdar://161583041

Reviewed by Brandon Stewart and Ryosuke Niwa.

Fix some potential int underflows before passing the values to `libxml2`
by adding explicit bounds checks using INT_MAX in three locations:
- `XSLTProcessorLibxslt.cpp`: XSLT document loading
- `XMLDocumentParserLibxml2.cpp`: XML document parsing
- `InitDataRegistry.cpp`: PlayReady initialization data parsing (GStreamer)

* Source/WebCore/Modules/encryptedmedia/InitDataRegistry.cpp:
(WebCore::isPlayReadySanitizedInitializationData):
* Source/WebCore/xml/XSLTProcessorLibxslt.cpp:
(WebCore::docLoaderFunc):
* Source/WebCore/xml/parser/XMLDocumentParserLibxml2.cpp:
(WebCore::xmlDocPtrForString):

Canonical link: https://commits.webkit.org/305255@main